jornada do item 6

--- a/Projeto1_Layout_Classificador.ipynb
+++ b/Projeto1_Layout_Classificador.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +41,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 246,
    "metadata": {
     "scrolled": false
    },
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
        "4                    vontade de uma pringles ughhhhh   Irrelevante"
       ]
      },
-     "execution_count": 488,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +234,7 @@
        "4  ai to muito puta namoral ja era a minha coca c...     Relevante"
       ]
      },
-     "execution_count": 489,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 258,
    "metadata": {
     "scrolled": false
    },
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 260,
    "metadata": {
     "scrolled": true
    },
@@ -588,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 261,
    "metadata": {
     "scrolled": true
    },
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 262,
    "metadata": {
     "scrolled": true
    },
@@ -708,7 +709,7 @@
        "All                    138         62  200"
       ]
      },
-     "execution_count": 515,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +800,7 @@
        "All                   69.0       31.0  100.0"
       ]
      },
-     "execution_count": 522,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,9 +811,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 264,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -885,7 +886,7 @@
        "VP                    0.00      48.39  15.0"
       ]
      },
-     "execution_count": 514,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,24 +907,469 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# criando um DataFrame\n",
+    "\n",
+    "data = {'Tweet':  [],\n",
+    "        'Classificação': [],\n",
+    "        }\n",
+    "\n",
+    "tetra = pd.DataFrame(data, columns = ['Tweet','Classificação'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 380,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# criando um DataFrame com tweets de test + train\n",
+    "\n",
+    "contador= 0\n",
+    "while True:\n",
+    "    try:\n",
+    "        tetra.loc[contador,\"Tweet\"]= test.loc[contador,\"Teste\"]\n",
+    "        tetra.loc[contador,[\"Classificação\"]]= test.loc[contador,[\"Classificação\"]]\n",
+    "    except:\n",
+    "        try:\n",
+    "            tetra.loc[contador,\"Tweet\"]= train.loc[contador-200,\"Treinamento\"]\n",
+    "            tetra.loc[contador,[\"Classificação\"]]= train.loc[contador-200,[\"Classificação\"]]\n",
+    "        except:\n",
+    "            break\n",
+    "    contador+= 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# validacao\n",
+    "\n",
+    "for i in range(len(tetra)):\n",
+    "    if i< 200:\n",
+    "        if tetra.iloc[i,0] == test.iloc[i,0]:\n",
+    "            pass\n",
+    "        else:\n",
+    "            print(\"fudeu\",i)\n",
+    "    else:\n",
+    "        if tetra.iloc[i,0] == train.iloc[i-200,0]:\n",
+    "            pass\n",
+    "        else:\n",
+    "            print(\"fudeu\",i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2 = []\n",
+    "train2 = []\n",
+    "clas_test= []\n",
+    "clas_train= []\n",
+    "\n",
+    "numeros = []\n",
+    "for n in range(500):\n",
+    "    numeros.append(n)\n",
+    "\n",
+    "while True:\n",
+    "    if len(numeros)== 0:\n",
+    "        break\n",
+    "    random.shuffle(numeros)\n",
+    "    test2.append(tetra.iloc[numeros[0],0])\n",
+    "    clas_test.append(tetra.iloc[numeros[0],1])\n",
+    "\n",
+    "    train2.append(tetra.iloc[numeros[1],0])\n",
+    "    clas_train.append(tetra.iloc[numeros[0],1])\n",
+    "    \n",
+    "    numeros.remove(numeros[0])\n",
+    "    numeros.remove(numeros[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# validador\n",
+    "\n",
+    "for i in range (len(test2)-1):\n",
+    "    if test2[i] in train2:\n",
+    "        print(\"fudeu\", i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {'Tweet':  [],\n",
+    "        'Classificação': [],\n",
+    "        }\n",
+    "\n",
+    "train22 = pd.DataFrame(data, columns = ['Tweet','Classificação'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {'Tweet':  [],\n",
+    "        'Classificação': [],\n",
+    "        }\n",
+    "\n",
+    "test22 = pd.DataFrame(data, columns = ['Tweet','Classificação'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contador = 0\n",
+    "while True:\n",
+    "    try:\n",
+    "        train22.loc[contador,\"Tweet\"]= train2[contador]\n",
+    "        train22.loc[contador,\"Classificação\"]= clas_train[contador]\n",
+    "        \n",
+    "        test22.loc[contador,\"Tweet\"]= test2[contador]\n",
+    "        test22.loc[contador,\"Classificação\"]= clas_test[contador]\n",
+    "    except:\n",
+    "        try:\n",
+    "            test22.loc[contador,\"Tweet\"]= test2[contador]\n",
+    "            test22.loc[contador,\"Classificação\"]= clas_test[contador]\n",
+    "        except:\n",
+    "            break\n",
+    "    contador+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 387,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train22_r = train22.loc[train22.Classificação==\"Relevante\",:]\n",
+    "\n",
+    "train22_irr = train22.loc[train22.Classificação==\"Irrelevante\",:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_train22_t=[]\n",
+    "for i in train22.Tweet:\n",
+    "    l_train22_t.append(limpandinho(i))\n",
+    "l_train22_t = \" \".join(l_train22_t).split()\n",
+    "\n",
+    "l_train22_r=[]\n",
+    "for i in train22_r.Tweet:\n",
+    "    l_train22_r.append(limpandinho(i))\n",
+    "l_train22_r = \" \".join(l_train22_r).split()\n",
+    "\n",
+    "l_train22_irr=[]\n",
+    "for i in train22_irr.Tweet:\n",
+    "    l_train22_irr.append(limpandinho(i))\n",
+    "l_train22_irr = \" \".join(l_train22_irr).split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tab_train22_t = pd.Series(l_train22_t)\n",
+    "tab_train22_t_a = tab_train22_t.value_counts()\n",
+    "tab_train22_t_r = tab_train22_t.value_counts(True)\n",
+    "\n",
+    "tab_train22_rel = pd.Series(l_train22_r)\n",
+    "tab_train22_rel_a = tab_train22_rel.value_counts()\n",
+    "tab_train22_rel_r = tab_train22_rel.value_counts(True)\n",
+    "\n",
+    "tab_train22_irr = pd.Series(l_train22_irr)\n",
+    "tab_train22_irr_a = tab_train22_irr.value_counts()\n",
+    "tab_train22_irr_r = tab_train22_irr.value_counts(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 390,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probR = sum(tab_train22_rel_a)/sum(tab_train22_t_a)\n",
+    "probI = sum(tab_train22_irr_a)/sum(tab_train22_t_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {'Tweet':  [],\n",
+    "        'Classificação': [],\n",
+    "        }\n",
+    "\n",
+    "novo2 = pd.DataFrame(data, columns = ['Tweet','Classificação'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "palavras_unicas_total=[]\n",
+    "for i in l_train22_t:\n",
+    "    if i not in palavras_unicas_total:\n",
+    "        palavras_unicas_total.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 393,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_teste2=[]\n",
+    "for i in test22.Tweet:\n",
+    "    c = limpandinho(i)\n",
+    "    l_teste2.append(c.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Legenda: T == Tweet\n",
+    "\n",
+    "contador = 0\n",
+    "for frase in l_teste2:\n",
+    "    probTDadoR = 1\n",
+    "    for palavra in frase:\n",
+    "        # Laplace smoothing\n",
+    "        if palavra in tab_train22_rel_a:\n",
+    "            probTDadoR*=(tab_train22_rel_a[palavra] + 1) / (len(tab_train22_rel) + len(palavras_unicas_total))\n",
+    "        else:\n",
+    "            probTDadoR*=(0 + 1) / (len(tab_train22_rel) + len(palavras_unicas_total))\n",
+    "            \n",
+    "            \n",
+    "    probTDadoI = 1\n",
+    "    for palavra in frase:\n",
+    "        # Laplace smoothing\n",
+    "        if palavra in tab_train22_irr_a:\n",
+    "            probTDadoI*=(tab_train22_irr_a[palavra] + 1) / (len(tab_train22_irr) + len(palavras_unicas_total))\n",
+    "        else:\n",
+    "            probTDadoI*=(0 + 1) / (len(tab_train22_irr) + len(palavras_unicas_total))\n",
+    "            \n",
+    "    probRdadoT = probTDadoR*probR\n",
+    "    \n",
+    "    probIdadoT = probTDadoI*probI\n",
+    "\n",
+    "    if probRdadoT>probIdadoT:\n",
+    "        \n",
+    "        novo2.loc[contador,\"Tweet\"]= \" \".join(frase)\n",
+    "        novo2.loc[novo2.Tweet==\" \".join(frase),\"Classificação\"] = \"Relevante\"\n",
+    "    \n",
+    "    elif probRdadoT<probIdadoT:\n",
+    "        \n",
+    "        novo2.loc[contador,\"Tweet\"]=\" \".join(frase)\n",
+    "        novo2.loc[novo2.Tweet==\" \".join(frase),\"Classificação\"] = \"Irrelevante\"\n",
+    "    \n",
+    "    contador+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "novo2[\"Performance\"] = \"nada\"\n",
+    "\n",
+    "for i in range(len(novo2)):\n",
+    "    if novo2.iloc[i, 1] == test22.iloc[i,1]:\n",
+    "        if novo2.iloc[i, 1] == \"Relevante\": novo2.iloc[i, 2]=\"VP\"\n",
+    "            \n",
+    "        else: novo2.iloc[i, 2]=\"VN\"  \n",
+    "    \n",
+    "    elif novo2.iloc[i, 1] != test22.iloc[i,1]:       \n",
+    "        if novo2.iloc[i, 1] == \"Relevante\": novo2.iloc[i, 2]=\"FP\"\n",
+    "            \n",
+    "        else: novo2.iloc[i, 2]=\"FN\"    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Porcentagem de verdadeiros positivos: 15.0\n",
+      "Porcentagem de falsos positivos: 16.0\n",
+      "Porcentagem de verdadeiros negativos: 55.00000000000001\n",
+      "Porcentagem de falsos negativos: 14.000000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "P = novo.loc[:,[\"Performance\"]].value_counts(normalize=True).round(4)*100\n",
+    "vp = P[\"VP\"]\n",
+    "fp = P[\"FP\"]\n",
+    "vn = P[\"VN\"]\n",
+    "fn = P[\"FN\"]\n",
+    "# print(f\"Porcentagem de verdadeiros positivos: {vp:.1f}\")\n",
+    "# print(f\"Porcentagem de falsos positivos: {fp:.1f}\")\n",
+    "# print(f\"Porcentagem de verdadeiros negativos: {vn:.1f}\")\n",
+    "# print(f\"Porcentagem de falsos negativos: {fn:.1f}\")\n",
+    "\n",
+    "print(f\"Porcentagem de verdadeiros positivos: {vp}\")\n",
+    "print(f\"Porcentagem de falsos positivos: {fp}\")\n",
+    "print(f\"Porcentagem de verdadeiros negativos: {vn}\")\n",
+    "print(f\"Porcentagem de falsos negativos: {fn}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tweet</th>\n",
+       "      <th>Classificação</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>minha bolsa cheia de remédio pringles doritos ...</td>\n",
+       "      <td>Relevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>parte ruim de comer pringles é quando minha mã...</td>\n",
+       "      <td>Relevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>essa ruffles de lata tá maravilhosa, o pisão n...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>comi pizza ontem e hoje cheetos, bis e pringle...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>pringles são vidaaa</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>uma pringles agr seria td</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>246</th>\n",
+       "      <td>@t3ddyyyyy tbm fiquei choquita q não era oreo ...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>preciso de um centro de reabilitação para vici...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>eu saindo da academia e indo comprar pringles 🤡</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>a batata pringles é muito boa to viciado 🥰</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>250 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Tweet Classificação\n",
+       "0    minha bolsa cheia de remédio pringles doritos ...     Relevante\n",
+       "1    parte ruim de comer pringles é quando minha mã...     Relevante\n",
+       "2    essa ruffles de lata tá maravilhosa, o pisão n...   Irrelevante\n",
+       "3    comi pizza ontem e hoje cheetos, bis e pringle...   Irrelevante\n",
+       "4                                  pringles são vidaaa   Irrelevante\n",
+       "..                                                 ...           ...\n",
+       "245                          uma pringles agr seria td   Irrelevante\n",
+       "246  @t3ddyyyyy tbm fiquei choquita q não era oreo ...   Irrelevante\n",
+       "247  preciso de um centro de reabilitação para vici...   Irrelevante\n",
+       "248    eu saindo da academia e indo comprar pringles 🤡   Irrelevante\n",
+       "249         a batata pringles é muito boa to viciado 🥰   Irrelevante\n",
+       "\n",
+       "[250 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 397,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test22"
+   ]
   },
   {
    "cell_type": "markdown",
