--- a/Projeto1_Layout_Classificador.ipynb
+++ b/Projeto1_Layout_Classificador.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4                    vontade de uma pringles ughhhhh   Irrelevante"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "4  ai to muito puta namoral ja era a minha coca c...     Relevante"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
     "\n",
     "Sabemos que:\n",
     "\n",
-    "$\\quad P(R|T) = \\frac{P(T∩R)}{P(T)}$ $\\Rightarrow$ $P(R|T) = \\frac{P(T|R) \\cdot P(R)}{P(T)}$ $\\quad$ **ETAPA 4**\n",
+    "$\\quad P(R|T) = \\frac{P(TintersecçãoR)}{P(T)}$ $\\Rightarrow$ $P(R|T) = \\frac{P(T|R) \\cdot P(R)}{P(T)}$ $\\quad$ **ETAPA 4**\n",
     "\n",
     "Assim, devemos calcular:\n",
     "\n",
@@ -321,7 +321,7 @@
     " \n",
     "$\\quad\\quad$ - Contar quantas palavras tem nos tweets Relevantes, Irrelevantes e Total (Relevantes + Irrelevantes)\n",
     "\n",
-    "* Não é preciso calcular $P(T)$, pois esse é cortado na equação de comparação."
+    "* Não é preciso calcular $P(T)$, pois esse é cortado na equação de comparação (i)."
    ]
   },
   {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,14 +457,14 @@
    "source": [
     "**ETAPA 1**\n",
     "\n",
-    "$y=$ total de palavras dos tweets relevantes\n",
+    "$y=$ total de palavras dos tweets relevantes e irrelevantes\n",
     "\n",
     "$w=$ total de palavras de todos os tweets "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 40,
    "metadata": {
     "scrolled": false
    },
@@ -715,7 +715,7 @@
    "source": [
     "# calculo das porcentagens\n",
     "\n",
-    "P = novo.loc[:,[\"Performance\"]].value_counts(normalize=True).round(4)*100\n",
+    "P = novo.Performance.value_counts(normalize=True).round(4)*100\n",
     "vp = P[\"VP\"]\n",
     "fp = P[\"FP\"]\n",
     "vn = P[\"VN\"]\n",
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -818,7 +818,7 @@
        "All                    138         62  200"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
        "All                   69.0       31.0  100.0"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -995,7 +995,7 @@
        "VP                    0.00      48.39  15.0"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -1339,10 +1339,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Porcentagem de verdadeiros positivos: 10.0\n",
-      "Porcentagem de falsos positivos: 24.0\n",
-      "Porcentagem de verdadeiros negativos: 45.2\n",
-      "Porcentagem de falsos negativos: 20.8\n"
+      "Porcentagem de verdadeiros positivos: 9.2\n",
+      "Porcentagem de falsos positivos: 18.4\n",
+      "Porcentagem de verdadeiros negativos: 50.8\n",
+      "Porcentagem de falsos negativos: 21.6\n"
      ]
     }
    ],
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1391,28 +1391,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>@kxcio faltou a latinha de pringles</td>\n",
+       "      <td>troco qualquer ovo de páscoa do mundo por uma ...</td>\n",
        "      <td>Irrelevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>@m_g__m_t cara tão alterando o tamanho de tudo...</td>\n",
+       "      <td>ai que vontade de comer pringles e doritos com...</td>\n",
        "      <td>Relevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>@maripisadinha @kkkkkkaique vc viu da ruffles ...</td>\n",
-       "      <td>Irrelevante</td>\n",
+       "      <td>@rapbyunnie queria batatinha pringles e sorvet...</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>queria hambúrguer, pringles, sonho de valsa, b...</td>\n",
+       "      <td>@caixadoremedios @carolborgesart ora ora, lite...</td>\n",
        "      <td>Irrelevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>fico pensando se esse pendrive do dj paulo pri...</td>\n",
-       "      <td>Irrelevante</td>\n",
+       "      <td>comendo uma pringles e bebendo um vinho branco...</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1421,28 +1421,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>245</th>\n",
-       "      <td>era só uma batata pringles na minha vida 😩</td>\n",
+       "      <td>a minha mae: queres que faça uma tarte de fran...</td>\n",
        "      <td>Irrelevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>246</th>\n",
-       "      <td>tem exatamente 5 dias que o linkedin tá discut...</td>\n",
+       "      <td>boa promoção pra experimentar a pringles da ru...</td>\n",
        "      <td>Irrelevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>247</th>\n",
-       "      <td>estou de roupão, comendo pringles, com minha a...</td>\n",
+       "      <td>vontade de comer um pringles</td>\n",
        "      <td>Irrelevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>248</th>\n",
-       "      <td>café da manhã pra ganho de massa\\nguaraná antá...</td>\n",
-       "      <td>Irrelevante</td>\n",
+       "      <td>parte ruim de comer pringles é quando minha mã...</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>249</th>\n",
-       "      <td>@tmlllllll quando abrir o pringles olha uma ro...</td>\n",
-       "      <td>Irrelevante</td>\n",
+       "      <td>já devorei uma pringles, uma barra de chocolat...</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1451,22 +1451,22 @@
       ],
       "text/plain": [
        "                                                 Tweet Classificação\n",
-       "0                  @kxcio faltou a latinha de pringles   Irrelevante\n",
-       "1    @m_g__m_t cara tão alterando o tamanho de tudo...     Relevante\n",
-       "2    @maripisadinha @kkkkkkaique vc viu da ruffles ...   Irrelevante\n",
-       "3    queria hambúrguer, pringles, sonho de valsa, b...   Irrelevante\n",
-       "4    fico pensando se esse pendrive do dj paulo pri...   Irrelevante\n",
+       "0    troco qualquer ovo de páscoa do mundo por uma ...   Irrelevante\n",
+       "1    ai que vontade de comer pringles e doritos com...     Relevante\n",
+       "2    @rapbyunnie queria batatinha pringles e sorvet...     Relevante\n",
+       "3    @caixadoremedios @carolborgesart ora ora, lite...   Irrelevante\n",
+       "4    comendo uma pringles e bebendo um vinho branco...     Relevante\n",
        "..                                                 ...           ...\n",
-       "245         era só uma batata pringles na minha vida 😩   Irrelevante\n",
-       "246  tem exatamente 5 dias que o linkedin tá discut...   Irrelevante\n",
-       "247  estou de roupão, comendo pringles, com minha a...   Irrelevante\n",
-       "248  café da manhã pra ganho de massa\\nguaraná antá...   Irrelevante\n",
-       "249  @tmlllllll quando abrir o pringles olha uma ro...   Irrelevante\n",
+       "245  a minha mae: queres que faça uma tarte de fran...   Irrelevante\n",
+       "246  boa promoção pra experimentar a pringles da ru...   Irrelevante\n",
+       "247                       vontade de comer um pringles   Irrelevante\n",
+       "248  parte ruim de comer pringles é quando minha mã...     Relevante\n",
+       "249  já devorei uma pringles, uma barra de chocolat...     Relevante\n",
        "\n",
        "[250 rows x 2 columns]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
