--- a/Projeto1_Layout_Classificador.ipynb
+++ b/Projeto1_Layout_Classificador.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,12 +344,11 @@
     "def limpandinho(text):\n",
     "    \n",
     "    # palavras com suas versoes + acentucao de letras\n",
-    "    dicio = {\"nao\": [\"n\",\"nn\",\"nnn\"], \n",
-    "             \"sim\": [\"ss\",\"s\",\"sss\",\"siim\"], \n",
+    "    dicio = {\"sim\": [\"ss\",\"s\",\"sss\",\"siim\"], \n",
     "             \"porque\": [\"pq\",\"motivo\"],\n",
     "             \"muito\": [\"mt\"],\n",
-    "             \"tudo\": [\"td\",\"todo\"]\n",
-    "             \n",
+    "             \"tudo\": [\"td\",\"todo\"],\n",
+    "             \"nao\": [\"ñ\", \"n\", \"nn\", \"nnn\"]\n",
     "            }\n",
     "    dicio2 = {\"a\": [\"ã\",\"á\",\"à\",\"â\", \"ä\"],\n",
     "             \"e\": [\"è\",\"é\",\"ê\", \"ë\"],\n",
@@ -417,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 122,
    "metadata": {
     "scrolled": false
    },
@@ -582,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 126,
    "metadata": {
     "scrolled": true
    },
@@ -701,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 127,
    "metadata": {
     "scrolled": false
    },
@@ -711,8 +710,8 @@
      "output_type": "stream",
      "text": [
       "Porcentagem de verdadeiros positivos: 12.5\n",
-      "Porcentagem de falsos positivos: 15.5\n",
-      "Porcentagem de verdadeiros negativos: 55.5\n",
+      "Porcentagem de falsos positivos: 16.0\n",
+      "Porcentagem de verdadeiros negativos: 55.0\n",
       "Porcentagem de falsos negativos: 16.5\n"
      ]
     }
